# embedded-i2s-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
src/: lib.rs
